# dao/service_info.go
@@ -13,9 +13,9 @@ type ServiceInfo struct {
 	LoadType    int       `json:"load_type" gorm:"column:load_type" description:"负载类型 0=http 1=tcp 2=grpc"`
 	ServiceName string    `json:"service_name" gorm:"column:service_name" description:"服务名称"`
 	ServiceDesc string    `json:"service_desc" gorm:"column:service_desc" description:"服务描述"`
-	UpdatedAt   time.Time `json:"create_at" gorm:"column:create_at" description:"更新时间"`
-	CreatedAt   time.Time `json:"update_at" gorm:"column:update_at" description:"添加时间"`
-	IsDelete    int8      `json:"is_delete" gorm:"column:is_delete" description:"是否已删除;0:否;1:是"`
+	UpdatedAt   time.Time `json:"update_at" gorm:"column:update_at" description:"更新时间"`
+	CreatedAt   time.Time `json:"create_at" gorm:"column:create_at" description:"添加时间"`
+	IsDelete    int8      `json:"is_delete" gorm:"column:is_delete" description:"是否已删除；0：否；1：是"`
 }
 
 func (t *ServiceInfo) TableName() string {
@@ -23,32 +23,33 @@ func (t *ServiceInfo) TableName() string {
 }
 
 func (t *ServiceInfo) ServiceDetail(c *gin.Context, tx *gorm.DB, search *ServiceInfo) (*ServiceDetail, error) {
-	// httprule
+	if search.ServiceName == "" {
+		info, err := t.Find(c, tx, search)
+		if err != nil {
+			return nil, err
+		}
+		search = info
+	}
 	httpRule := &HttpRule{ServiceID: search.ID}
 	httpRule, err := httpRule.Find(c, tx, httpRule)
 	if err != nil && err != gorm.ErrRecordNotFound {
 		return nil, err
 	}
-	// tcprule
 	tcpRule := &TcpRule{ServiceID: search.ID}
 	tcpRule, err = tcpRule.Find(c, tx, tcpRule)
 	if err != nil && err != gorm.ErrRecordNotFound {
 		return nil, err
 	}
-	// grpcrule
 	grpcRule := &GrpcRule{ServiceID: search.ID}
 	grpcRule, err = grpcRule.Find(c, tx, grpcRule)
 	if err != nil && err != gorm.ErrRecordNotFound {
 		return nil, err
 	}
-	// Access Controller
 	accessControl := &AccessControl{ServiceID: search.ID}
 	accessControl, err = accessControl.Find(c, tx, accessControl)
 	if err != nil && err != gorm.ErrRecordNotFound {
 		return nil, err
 	}
-
-	// loadBalance
 	loadBalance := &LoadBalance{ServiceID: search.ID}
 	loadBalance, err = loadBalance.Find(c, tx, loadBalance)
 	if err != nil && err != gorm.ErrRecordNotFound {
